# vex

./: CLAUDE.md  Cargo.toml  Dockerfile.server  README.md  compose.prod.yaml  compose.yaml  vex.toml.example
.github/workflows/: ci.yml  publish.yml  release.yml
crates/vex-builder/: Cargo.toml
crates/vex-builder/src/: detect.rs  dockerfile.rs  lib.rs
crates/vex-cli/: Cargo.toml
crates/vex-cli/src/: client.rs  config.rs  main.rs  output.rs
crates/vex-cli/src/commands/: deploy.rs  deployments.rs  destroy.rs  env.rs  list.rs  login.rs  logs.rs  mod.rs  status.rs
crates/vex-core/: Cargo.toml
crates/vex-core/src/: error.rs  lib.rs  model.rs  schema.rs
crates/vex-server/: Cargo.toml
crates/vex-server/src/: config.rs  db.rs  main.rs
crates/vex-server/src/middleware/: auth.rs  mod.rs
crates/vex-server/src/routes/: apps.rs  auth.rs  deploy.rs  env.rs  logs.rs  mod.rs
crates/vex-server/src/services/: build_logger.rs  builder.rs  deployer.rs  logger.rs  mod.rs  proxy.rs  tls.rs
migrations/: 001_create_users.sql  002_create_apps.sql  003_create_deployments.sql  004_create_env_vars.sql  005_add_github_auth.sql  006_build_logs.sql
