[workspace]
resolver = "2"
members = [
    "crates/vex-core",
    "crates/vex-builder",
    "crates/vex-server",
    "crates/vex-cli",
]

[workspace.package]
version = "0.2.5"
edition = "2024"
license = "MIT"

[workspace.dependencies]
vex-core = { path = "crates/vex-core" }
vex-builder = { path = "crates/vex-builder" }

anyhow = "1"
axum = { version = "0.8", features = ["multipart"] }
bollard = "0.18"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
console = "0.15"
dashmap = "6"
flate2 = "1"
open = "5"
indicatif = "0.17"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1"] }
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate"] }
tar = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
instant-acme = { version = "0.8", default-features = false, features = ["hyper-rustls", "ring", "rcgen"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
uuid = { version = "1", features = ["v7", "serde"] }
