[package]
name = "vex-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "vex"
path = "src/main.rs"

[dependencies]
vex-core = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
open = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
