[package]
name = "vex-server"
version.workspace = true
edition.workspace = true

[dependencies]
vex-core = { workspace = true }
vex-builder = { workspace = true }

anyhow = { workspace = true }
bytes = "1"
axum = { workspace = true }
bollard = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
flate2 = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tar = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
instant-acme = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-rustls = { workspace = true }
tempfile = "3"
uuid = { workspace = true }
